<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/login_top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical">

        <View
            android:layout_width="100dp"
            android:layout_height="110dp"
            android:background="@mipmap/hcw" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout style="@style/login_edit_layout">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:src="@mipmap/user" />

            <View
                android:layout_width="2dp"
                android:layout_height="30dp"
                android:background="@color/blackLight" />

            <EditText
                android:id="@+id/login_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/login_name"
                android:layout_margin="10dp"
                android:background="@color/white"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            style="@style/login_edit_layout"
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:src="@mipmap/pwd" />

            <View
                android:layout_width="2dp"
                android:layout_height="30dp"
                android:background="@color/blackLight" />

            <EditText
                android:id="@+id/login_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:hint="@string/login_pwd"
                android:background="@color/white"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_btn"
            style="@style/login_button_layout"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/enter"
                android:drawablePadding="10dp"
                android:text="@string/login_submit"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/login_bottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>
